Small changes. About to add EBF Tier and % Adequacy

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ data/
 data_with_holes.csv
 Historic\ RC\ *.xlsx
 Historic\ Data.xlsx
+Historic RC Data One Sheet v*.csv
+reportCardAnalyzer.ipynb
+temp.csv
